--- a/styles/index.css
+++ b/styles/index.css
@@ -1,35 +1,101 @@
-body, html {}
-header {}
-header nav {
-    background-color: aqua ;
-    display: flex; flex-flow: column nowrap;
+body, html {background-color: black; color: #fff;}
+header {position: relative; background-color: yellow;}
+header .menu_wrap {
+    position: fixed; right: 160px; top: 50px; z-index: 999;
+    }
+header .menu_wrap nav {
+    
+    width: 204px; height: 260px;
+    display: flex; flex-flow: column nowrap; text-align: center;
+    padding: 10px 20px;
 }
-header nav .menu{}
+header nav .menu {
+    display: flex; flex-flow: row nowrap; justify-content: space-between;
+    border-bottom: 1px solid #fff; padding: 10px;
+}
 header nav .menu a {}
-header nav .menu a.active {}
-/* */
-.wrap {}
-.wrap .main_bg {}
-.wrap .main_bg video {}
-.wrap .main_bg .main_text {}
-.wrap .main_bg .main_text p {}
+header nav a {
+    color: #fff; font-size: 1.25rem; font-weight: 600; line-height: 1.2;
+    letter-spacing: -0.02em;
+}
+header nav .menu a img {width: 100%; }
+header nav .menu a.active {}     
+header nav p {padding: 10px 0; display: none;}
+header nav p a {
+    border-bottom: 1px solid #fff; display: block; padding-bottom: 5px;
+    font-size: 1.05rem;
+}
 
-.wrap .profile {}
-.wrap .profile .title {}
-.wrap .profile .contents {}
-.wrap .profile .contents .left {}
-.wrap .profile .contents .left .Profile {}
-.wrap .profile .contents .left .Profile p {}
-.wrap .profile .contents .left .Profile h3 {}
+/* */
+
+.wrap {width: 100%; margin: 0 auto;}
+.wrap .main_bg {
+    width: 100%; margin: 0 auto;
+    position: relative;
+}
+.wrap .main_bg video {
+    width:100%; height: 100vh;
+    object-fit: cover; pointer-events: none;
+    }
+.wrap .main_bg .main_text {
+    text-align: center;
+    position: absolute; top: 35%; left: 50%; transform: translateX(-50%)
+    
+}
+.wrap .main_bg .main_text p {
+    color: #fff; font-size: 2.50rem; font-weight: 700;
+    line-height: 1.2; letter-spacing: -0.02em; margin-bottom: 20px;
+}
+.wrap .main_bg .main_text p:nth-of-type(1) {margin-bottom: 40px;}
+.wrap .main_bg .main_text p:nth-of-type(2) {font-size: 0.94rem; font-weight: 500;}
+.wrap .main_bg .main_text p:nth-of-type(4) {font-size: 1.25rem; font-weight: 600;}
+/* 프로필 */
+
+.wrap .profile {width: 100%; margin: 100px auto; background-color: coral; }
+.wrap .profile .title {
+    margin-top: 50px; font-size: 1.88rem;
+    line-height: 1.7; line-height: -0.02em;
+    margin-bottom: 150px; 
+}
+.wrap .profile .contents {
+    width: 100%; margin: 0 auto;
+    display: flex; flex-flow: row nowrap; justify-content: center;
+    
+}
+.wrap .profile .contents .left {
+    margin-right: 100px;
+}
+.wrap .profile .contents .left .Profile { margin-bottom: 100px;}
+.wrap .profile .contents .left .Profile p:last-of-type { margin-bottom: 10px;}
+.wrap .profile .contents .left .Profile p {font-size: 0.94rem; font-weight: 300; line-height: 1.7; letter-spacing: -0.02em;}
+.wrap .profile .contents .left .Profile h3 {
+    margin-bottom: 100px;font-size: 1.56rem; font-weight: 600; line-height: 1.2; letter-spacing: -0.01em; padding: 20px 0;
+    border:1px solid #fff; border-left: 0; border-right: 0;
+}
 .wrap .profile .contents .left .License {}
-.wrap .profile .contents .left .License p {}
-.wrap .profile .contents .left .License h3 {}
-.wrap .profile .contents .center {}
-.wrap .profile .contents .center p {}
-.wrap .profile .contents .center h3 {}
-.wrap .profile .contents .right {}
-.wrap .profile .contents .right p {}
-.wrap .profile .contents .right p img {}
+.wrap .profile .contents .left .License p:last-of-type { margin-bottom: 10px;}
+.wrap .profile .contents .left .License p {font-size: 0.94rem; font-weight: 300; line-height: 1.7; letter-spacing: -0.02em;}
+.wrap .profile .contents .left .License h3 {
+    font-size: 1.56rem; font-weight: 600; line-height: 1.2; letter-spacing: -0.01em; padding: 20px 0; border:1px solid #fff; border-left: 0; border-right: 0;
+}
+.wrap .profile .contents .center { padding-top: 30px;
+    background-color: cornflowerblue;
+    margin-right: 100px; margin-top: 75px;
+}
+.wrap .profile .contents .center p {font-size: 0.94rem; font-weight: 300; line-height: 1.7; letter-spacing: -0.02em;}
+.wrap .profile .contents .center h3 {
+    margin-top: 10px;
+    border:1px solid #fff; border-left: 0; border-right: 0;
+    font-size: 1.56rem; font-weight: 600; line-height: 1.2; letter-spacing: -0.01em;padding: 20px 0}
+.wrap .profile .contents .right {
+    margin-top: 245px;
+    background-color: darkturquoise;
+    width: 140px;
+    display: flex; flex-flow: row wrap; }
+.wrap .profile .contents .right p { background-color: yellow;
+    width: 50px; margin-right: 5px;  padding: 10px;
+}
+.wrap .profile .contents .right p img {width: 100%;}
 
 .wrap #project1 {}
 .wrap #project1 .title {}
