--- a/styles/index.css
+++ b/styles/index.css
@@ -109,9 +109,9 @@ header nav p a:hover {background-color:#222;}
 
 .wrap #project1 {width: 1600px; margin: 0 auto;  
 }
-.wrap #project1 .title {margin-bottom: 100px;}
+.wrap #project1 .title {margin-bottom: 110px;}
 
-.wrap #project1 .contents {width:1367px; margin:0 auto; display:flex; gap:40px; height: 690px;
+.wrap #project1 .contents {width:1367px; margin:0 auto; display:flex; gap:40px; height: 670px;
 
 }
 .wrap #project1 .contents .swiper {transition-timing-function: linear; 
@@ -123,8 +123,8 @@ header nav p a:hover {background-color:#222;}
     display:flex; align-items: center; justify-content: space-between; padding:50px 50px;
     /* border: 1px solid #fff;     */
 }
-.wrap #project1 .contents .swiper .swiper-wrapper  .left_poto {width: 770px; margin-right:70px ;}
-.wrap #project1 .contents .swiper .swiper-wrapper  .left_poto img {width: 770px;}
+.wrap #project1 .contents .swiper .swiper-wrapper  .left_poto {width: 800px; margin-right:100px ;}
+.wrap #project1 .contents .swiper .swiper-wrapper  .left_poto img {width: 800px;}
 .wrap #project1 .contents .swiper .swiper-wrapper  .right_text {width:calc(100% - 100px);}
 .wrap #project1 .contents .swiper .swiper-wrapper  .right_text h1 {font-size: 1.38rem; font-weight: 500; line-height: 1.7; letter-spacing: -0.02em;}
 .wrap #project1 .contents .swiper .swiper-wrapper  .right_text p {font-size: 0.88rem;line-height: 1.3; letter-spacing: -0.02em;}
@@ -141,7 +141,7 @@ header nav p a:hover {background-color:#222;}
 .wrap #project1 .contents .web .swiper-slide .right_text .btn a:nth-child(3) {background-color: #eee; color:#000;}
 .wrap #project1 .contents .web .swiper-slide .right_text .btn a:hover {box-shadow:0 0 10px rgba(0,0,0,0.2); padding-right:30px; transform-origin:left top;}
 
-.wrap #project1 .contents .swiper-scrollbar { background-color: #222; height: 3px; }
+.wrap #project1 .contents .swiper-scrollbar { background-color: #3b3b3b; height: 3px; }
 
 
 
