--- a/styles/index.css
+++ b/styles/index.css
@@ -13,7 +13,7 @@ header .menu_wrap nav {
 }
 
 
-header .menu_wrap nav:hover P {display: block;}
+header .menu_wrap nav:hover p {display: block;}
 header .menu {
     display: flex; flex-flow: row nowrap; justify-content: space-between;
     border-bottom: 1px solid #fff; padding: 10px;
@@ -92,8 +92,8 @@ header nav p a:hover {background-color:#222;}
     font-size: 1.66rem; font-weight: 400; line-height: 1.2; letter-spacing: -0.01em; padding: 20px 0; border:1px solid #fff; border-left: 0; border-right: 0;
     font-family: "ZCOOL QingKe HuangYou";letter-spacing: 0.03em;
 }
-.wrap .profile .contents .center { padding-top: 30px;
-    margin-right: 100px; margin-top: 187px;
+.wrap .profile .contents .center { padding-top: 145px;
+    margin-right: 100px; margin-top: 75px;
 }
 .wrap .profile .contents .center p {font-size: 0.94rem; font-weight: 300; line-height: 1.7; letter-spacing: -0.02em;}
 .wrap .profile .contents .center h3 {
